--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Phasmo Toolkit",
+  "short_name": "Phasmo Toolkit v0.1.1",
   "name": "Phasmophobia Toolkit",
   "icons": [
     {
