--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phasmokit",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3"
   },
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
