--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3"
   },
-  "homepage": "./phasmotoolkit",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
