--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf docs && cp -R build docs",
+    "build": "react-scripts build && rm -rf docs && cp -R build docs && git add .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
