--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phasmokit",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
