--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "phasmokit",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "boring-avatars": "^1.5.3",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "lodash-es": "^4.17.21",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-xarrows": "^1.7.0"
   },
   "homepage": "./",
   "scripts": {
