--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
-    "react-xarrows": "^1.7.0"
+    "react-xarrows": "^1.7.0",
+    "semver": "^7.3.5"
   },
   "homepage": "./",
   "scripts": {
