--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phasmokit",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -16,6 +16,7 @@
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "lodash-es": "^4.17.21",
+    "lodash.uniqby": "^4.7.0",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
