--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phasmokit",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -15,14 +15,19 @@
     "boring-avatars": "^1.5.3",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "i18next": "^20.6.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.0",
     "lodash-es": "^4.17.21",
     "lodash.sortby": "^4.7.0",
     "lodash.uniqby": "^4.7.0",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-xarrows": "^1.7.0",
     "semver": "^7.3.5"
   },
